test/ir/funcs.out
ir/funcs.v3:3:8: error: Expected token type '(', but got identifier
